# klaatu-django

./: .editorconfig  .flake8  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg
groplay/: __init__.py  actions.py  admin.py  db.py  fields.py  managers.py  permissions.py  schemas.py  serializer_mixins.py  storage.py  test.py  typing.py  utils.py  view_mixins.py  views.py  widgets.py
groplay/management/: base.py
groplay/management/commands/: classhierarchy.py  runserver.py
groplay/templates/groplay/: preloader.html
groplay/templates/groplay/modals/: base.html  dynamic.html  dynamic_content.html
groplay/templates/groplay/widgets/: custom_checkbox.html  custom_checkbox_select.html
groplay/templatetags/: groplay.py
groplay_django/: __init__.py  actions.py  admin.py  apps.py  authentication.py  db.py  fields.py  renderers.py  schemas.py  serializer_fields.py  serializer_mixins.py  settings.py  storage.py  test.py  typing.py  utils.py  view_mixins.py  views.py  widgets.py
groplay_django/management/: base.py
groplay_django/management/commands/: classhierarchy.py  runserver.py
groplay_django/templates/groplay/modals/: dynamic.html
groplay_django/templatetags/: groplay.py
