[metadata]
name = groplay-django
version = attr: groplay.__version__

[options]
packages = groplay
include_package_data = True
install_requires =
    beautifulsoup4
    Django>=3.2,<4
    djangorestframework
    Pillow
    python-dateutil

[options.package_data]
groplay = templates/*.html

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
    .venv
ignore = W504,W601,F723,E731,E266,E741
max-line-length = 119
max-doc-length = 79

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_own = groplay
known_django = django
line_length = 119
multi_line_output = 3
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,DJANGO,OWN,LOCALFOLDER
skip = .venv

[mypy]
check_untyped_defs = True
show_error_codes = True
files = groplay
ignore_missing_imports = True

[pylint]
jobs=0
ignore=.git,__pycache__

[pylint.format]
max-line-length=119

[pylint.messages_control]
disable=missing-class-docstring,
    missing-module-docstring,
    missing-function-docstring,
    abstract-method,
    too-few-public-methods,
    import-outside-toplevel,
    pointless-string-statement,
    invalid-name

[pylint.typecheck]
generated-members=objects,DoesNotExist
